# OperatorSystem

./: .gitignore  CMakeLists.txt  README.md  main.c  main.h
allocation/: allocator.c  allocator.h  banker.c  banker.h
allocation/base/: resource_allocate.c  resource_allocate.h
allocation/teacher/: teacher_template.cpp  teacher_template.h
allocation/test/: test_allocator.c  test_allocator.h
allocation/test/allocation/: test_allocator.c  test_checkResourceSecurity.c  test_initBanker.c
allocation/test/header/: test_allocator.h  test_checkResourceSecurity.h  test_initBanker.h
allocator/: memory.c  memory.h  systemResource.c  systemResource.h
allocator/cpu/: memory_cpu.c  memory_cpu.h
allocator/file/: memory_file.c  memory_file.h
allocator/gpu/: memory_gpu.c  memory_gpu.h
allocator/memory/: memory_allocator.c  memory_allocator.h
allocator/network/: memory_network.c  memory_network.h
allocator/swap/: memory_swap.c  memory_swap.h
allocator/test/allocator/: test_initSystemResource.c
allocator/test/header/: test_initSystemResource.h
process/: process_scheduling.c  process_scheduling.h
process/test/header/: test_reverseProConBlockFromLink.h
process/test/process_scheduling/: test_process_scheduling.c  test_process_scheduling.h  test_reverseProConBlockFromLink.c
process/theather/: process_template.c
tools/hashMap/: hashMap.c  hashMap.h
tools/hashMapResource/: hashMapResource.c  hashMapResource.h
